[project]
name = "llm-proxy-ondemand"
version = "0.1.1"
description = "A FastAPI proxy server for vLLM w/wo SLURM support and automatic process management"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Kun Ran", email = "rankun203@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "httpx>=0.28.1",
    "click>=8.2.1",
]

[project.scripts]
llm-proxy-ondemand = "llm_proxy.cli:main"

[project.urls]
Homepage = "https://github.com/rankun203/llm-proxy"
Repository = "https://github.com/rankun203/llm-proxy"
Issues = "https://github.com/rankun203/llm-proxy/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_proxy"]
